prometheus/03-alertmanager/03-alertmanager-headlessService.yaml
apiVersion: v1
kind: Service
metadata:
  name: alertmanager-svc
  namespace: kube-prom
spec:
  clusterIP: "None"
  selector:
    app: alert
  ports:
  - name: web
    port: 9093
    targetPort: 9093
  - name: cluster
    port: 9094
    targetPort: 9094
